[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/interface/main_menu/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer/HBoxContainer/CenterContainer"]
margin_left = 186.0
margin_top = 293.0
margin_right = 323.0
margin_bottom = 307.0
size_flags_horizontal = 6
text = "Awesome Game Title"

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/CenterContainer2"]
margin_left = 235.0
margin_top = 266.0
margin_right = 275.0
margin_bottom = 334.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="CanvasLayer/HBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 40.0
margin_bottom = 20.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="CanvasLayer/HBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 40.0
margin_bottom = 44.0

[node name="QuitButton" type="Button" parent="CanvasLayer/HBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 40.0
margin_bottom = 68.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/HBoxContainer/CenterContainer2/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/CenterContainer2/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/CenterContainer2/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
